# NPY-for-Fortran

./: .gitignore  CMakeLists.txt  LICENSE  README.md  c.npy  example.npz  example.py  mtx.npy  vec.npy
src/: endian_swap.f90  example.f90  npy.F90  npy.f90
